--- a/style.css
+++ b/style.css
@@ -752,7 +752,7 @@ a:focus, a:active {
 }
 .start-game .how-to-play .bar.bar-3 {
   height: 150px;
-  background: #4C4660;
+  background: #9174f5;
 }
 .start-game .how-to-play .section-2 .bar {
   cursor: url(https://greghub.github.io/coloron/public/svg/cursor.svg), pointer;
